# forge-glow

./: .gitattributes  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  RESUME_PROMPT.md  install.sh  uninstall.sh
.claude-plugin/: plugin.json
.github/workflows/: release.yml  shellcheck.yml
Formula/: README.md  forge-glow.rb
docs/: future-ideas.md  grafana-dashboard.json  grafana-setup.md  otel-setup.md  tmux-setup.md  workflow-setup.md
hooks/: hooks.json  session-init.sh
hud/: config.json  statusline.sh
hud/adapters/: ecc.sh  harness.sh  omc.sh
hud/lib/: alerts.sh  parse-codex.sh  parse-forge.sh  parse-otel.sh  parse-routing.sh  parse-stdin.sh  parse-transcript.sh  parse-update.sh  render.sh
stats/: pyproject.toml
stats/src/forge_glow_stats/: __init__.py  __main__.py  admin.py  cli.py  dashboard.py  parsers.py  workflow.py
stats/src/forge_glow_stats/examples/: workflow.example.json
stats/src/forge_glow_stats/presets/progress/: decision-log.json  kanban-md.json  simple-todo.json
test/parity/: run.sh
test/parity/fixtures/: claude-alert-rate.json  claude-basic.json  claude-fable.json  claude-longcost.json  claude-rich.json  codex-session.jsonl  fable-transcript.jsonl
test/parity/golden/: claude-alert-rate.txt  claude-basic.txt  claude-fable.txt  claude-longcost.txt  claude-rich.txt  codex-active.txt
tmux/: status-right.sh
tools/: curl-install.sh  diagnose.sh  metrics-report.sh  self-update.sh
