[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-glow-stats"
version = "0.5.0"
description = "Dashboard for Claude Code + Codex CLI efficiency (forge-glow stats)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "ggombee" }]
keywords = ["claude-code", "codex", "dashboard", "otel", "cost"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Terminals"
]
dependencies = [
  "rich>=13.0",
  "requests>=2.25"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
forge-glow-stats = "forge_glow_stats.cli:main"

[project.urls]
Homepage = "https://github.com/ggombee/forge-glow"
Issues = "https://github.com/ggombee/forge-glow/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
forge_glow_stats = ["presets/progress/*.json"]
